2006-06-27  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/unset.c (unset_minitics, reset_command): Change action of
	unset_minitics to MINI_OFF and set to MINI_DEFAULT after calling
	from reset_command().
	Bug #1346814.

2006-06-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to recent changes in English files.

2006-06-27  Keith Hellman  <khellman@users.sourceforge.net>

	* Accommodate new gnu autotools convention of installing read-only
	data relative to @datarootdir@
	Bug #1513675

2006-06-27  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* m4/pkg.m4: New files containing the pkg-config macros.

2006-06-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/wxt.trm: Add index point for "help set term wxt".

	* configure.in src/variable.c:  Only invoke kpsexpand if configuration
	option --with-kpsexpand is chosen at build time.
	Bug #1377786

2006-06-26  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/help.c (FindHelp): Fixed bug introduced on 2006-06-23 where
	strcpy() overwrote keyword, inadvertently losing the subtopic string.
	Now expand all abbreviated sub-keywords until end of keyword string.

	* src/util.c (lower_case): Fix off-by-one bug in characters treated.

2006-06-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): If a data field matches the current setting
	of 'set datafile missing "foo"', then do not interrupt the plotted line
	spanning the adjacent points in the plot.  This was the behavior in 
	version 3.7, and is what the documents describe, but has not been the
	case in version 4.0.
	Bugs #775810 #918793 #969322 #1403945

2006-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Whitespace cleanup, comments.

	* demo/contours.dem demo/vector.dem: Update demo to use "set view map".

2006-06-23  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/help.c (FindHelp): Return a pointer to an empty help key if the